--- a/template.html
+++ b/template.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<!-- This website template was created by : Student's Diana Linville -->
+<!-- This website template was created by : Demi van Run -->
 <html lang="en">
 
 <head>
   <title>Forward Fitness Club</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="css/style.css">
+  <meta name="viewport" content="width=device-with, initial-scale=1">
 </head>
 
 <body>
