--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<!-- This website template was created by : Student's Diana Linville -->
+<!-- This website template was created by : Demi van Run -->
 <html lang="en">
 
 <head>
   <title>Forward Fitness Club</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="css/style.css">
+  <meta name="viewport" content="width=device-with, initial-scale=1">
+  <link href="https://fonts.googleapis.com/css2?family=Francois+One&family=Roboto+Slab&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -27,14 +29,34 @@
     </nav>
 
     <!-- Hero Image -->
-    <div id="hero">
+    <div id="hero" class="tablet-desktop">
       <img src="images/hero-image.jpg" alt="left arem extended holding a weight">
     </div>
 
     <!-- Use the main area to add the main content of the webpages -->
     <main>
-      <div id="intro">
-        <p>Welcome to Forward Fitness Club. Our mission is to help our clients meet their fitness and nutrition goals.</p>
+
+      <div class="mobile">
+
+        <p>
+          Welcome to Forward Fitness Club. Our mission is to help our clients meet their fitness and nutrition goals.
+        </p>
+
+        <h3>FREE One-Week Trial Membership!</h3>
+        <p>Call Us Today to Get Started</p>
+        <p class="tel-link"><a href="tel:8145559608">(814) 555-9608</a></p>
+
+        <h4>Fitness Club Hours:</h4>
+        <ul class="hours">
+          <li>Mon - Thu: 6:00am - 6:00pm</li>
+          <li>friday: 6:00am - 4:00pm</li>
+          <li>Saturday: 8:00am - 6:00pm</li>
+          <li>Sunday: Closed</li>
+        </ul>
+      </div>
+      <div class="tablet-desktop">
+        <p>Welcome to Forward Fitness Club. Our mission is to help our clients meet their fitness and nutrition goals.
+        </p>
 
         <p>If you have struggles with getting healthy and
           need the motivation and resources to make a healthy lifestyle change,
@@ -45,7 +67,7 @@
         <p>We provide a FREE, one-week membership to experience the benefits of our
           equipment and facility. This one-week trial gives you complete access to
           our equipment, training classes, and nutrition planning. Contact us
-          today to <span class="action">start your free trial!</p>
+          today to <span class="action">start your free trial!</span></p>
       </div>
     </main>
 
